--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,6 +12,25 @@
       "skipFiles": [
         "<node_internals>/**"
       ]
+    },
+    {
+      "name": "teamclient",
+      "cwd": "${workspaceFolder}",
+      "runtimeArgs": [
+        "run-script",
+        "start"
+      ],
+      "type": "node",
+      "request": "launch",
+      "runtimeExecutable": "npm",
+      "windows": {
+        "runtimeExecutable": "npm.cmd"
+      },
+      "console": "internalConsole",
+      "internalConsoleOptions": "openOnSessionStart",
+      "env": {
+        "run.config": "{\"handlerId\":\"fiori_tools\",\"runnableId\":\"/home/user/projects/teamclient\"}"
+      }
     }
   ]
 }
